--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -30,9 +30,16 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
+    implementation 'com.amplifyframework:core:1.36.2'
+    implementation 'com.amplifyframework:aws-auth-cognito:1.36.2'
+
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3")
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'androidx.core:core-ktx:1.8.0'
