--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript{
+    dependencies {
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.7.10"
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.5.30' apply false
+    id("org.jetbrains.dokka") version "1.7.10"
 }
 
 task clean(type: Delete) {
