--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,10 @@ dependencies {
     implementation 'com.amplifyframework:core:1.36.2'
     implementation 'com.amplifyframework:aws-auth-cognito:1.36.2'
 
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.13.+"
+
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3")
-    implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
